--- a/src/components/MainScreenInfo/MainScreenInfo.module.css
+++ b/src/components/MainScreenInfo/MainScreenInfo.module.css
@@ -40,6 +40,10 @@
   margin: 35px 0;
 }
 
+.info_img_mobile {
+  display: none;
+}
+
 @media (max-width: 1419.98px) {
   .info_right {
     width: 425px;
@@ -51,6 +55,7 @@
     width: 700px;
     position: absolute;
     transform: translateX(-22%);
+    max-width: 150%;
   }
   .info_main .title {
     max-width: 500px;
@@ -62,5 +67,74 @@
 @media (max-width: 1050.98px) {
   .info_main .title {
     max-width: 450px;
+  }
+}
+
+@media (max-width: 991.98px) {
+  .info_right {
+    display: block;
+    background: url("../../assets/img/info_mobile_bg.png") no-repeat center;
+    background-size: cover;
+    height: 350px;
+    margin-top: 270px;
+    position: relative;
+    width: 100% !important;
+    right: initial;
+    top: initial;
+  }
+
+  .info_right svg {
+    position: absolute;
+    max-width: 150%;
+    left: 46%;
+    width: auto;
+    top: -159%;
+    transform: translateX(-50%);
+  }
+  .info {
+    padding-bottom: 0;
+  }
+}
+
+@media (max-width: 767.98px) {
+  .info_text button {
+    margin: 0 auto;
+    display: block;
+  }
+  .info_text button span {
+    width: 200px;
+  }
+  .info_text {
+    max-width: initial;
+    margin: 0;
+    padding: 80px 0 50px;
+  }
+}
+@media (max-width: 477.98px) {
+  .info_main .title {
+    max-width: 100%;
+  }
+  .info_main {
+    padding-top: 40px;
+  }
+  .info_text {
+    padding: 20px 0 0;
+  }
+  .info_right svg {
+    top: -264%;
+  }
+  .info_right {
+    margin-top: 225px;
+    height: 210px;
+  }
+}
+
+@media (max-width: 399.98px) {
+  .info_right svg {
+    top: -317%;
+  }
+  .info_right {
+    margin-top: 215px;
+    height: 175px;
   }
 }
