--- a/src/components/Coins/Coins.module.css
+++ b/src/components/Coins/Coins.module.css
@@ -88,3 +88,37 @@
 .coins_block:nth-child(2) h4 {
   color: #fcc413;
 }
+
+@media (max-width: 991.98px) {
+  .block_coins img {
+    max-width: 70px;
+    margin: 10px 10px 0;
+  }
+}
+
+@media (max-width: 767.98px) {
+  .coins_farm {
+    flex-direction: column;
+    align-items: center;
+  }
+  .coins_block {
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+  }
+  .coins_block h4 {
+    font-family: "Rubik";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 38px;
+    line-height: 46px;
+  }
+  .coins_block h4 img {
+    max-width: 48px;
+    margin-right: 5px;
+  }
+  .coin {
+    flex-basis: 25%;
+    margin: 10px 0;
+  }
+}
