--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -34,3 +34,20 @@
   align-items: center;
   justify-content: center;
 }
+
+@media (max-width: 767.98px) {
+  .form_main {
+    flex-direction: column;
+  }
+  .form h3 {
+    font-size: 32px;
+    line-height: 48px;
+  }
+  .form_main input {
+    max-width: 280px;
+    margin-right: 0;
+    margin-bottom: 30px;
+    font-size: 22px;
+    line-height: 22px;
+  }
+}
