--- a/src/components/ExploreBlock/ExploreBlock.module.css
+++ b/src/components/ExploreBlock/ExploreBlock.module.css
@@ -28,7 +28,7 @@
   background: #f4f7fd;
   box-shadow: -4px 8px 11px rgba(0, 0, 0, 0.43), inset 0px 5px 5px #ffffff;
   border-radius: 6px;
-  max-width: 370px;
+  max-width: 355px;
   position: relative;
   z-index: 2;
 }
@@ -70,7 +70,7 @@
   font-family: "Rubik";
   font-style: normal;
   font-weight: 500;
-  font-size: 22px;
+  font-size: 20px;
   line-height: 26px;
   text-align: center;
   color: #000000;
@@ -83,6 +83,28 @@
     padding: 50px 0;
   }
   .explore_block {
-    width: 310px;
+    width: 300px;
+  }
+}
+@media (max-width: 991.98px) {
+  .explore_main {
+    flex-direction: column;
+    align-items: center;
+  }
+  .explore_block_wrapper {
+    margin-bottom: 50px;
+  }
+  .explore h2 {
+    margin: 0;
+  }
+  .explore {
+    padding: 50px 0 0;
+  }
+}
+
+@media (max-width: 477.98px) {
+  .explore h2 {
+    font-size: 34px;
+    line-height: 42px;
   }
 }
