--- a/src/components/FirstScreen/FirstScreen.module.css
+++ b/src/components/FirstScreen/FirstScreen.module.css
@@ -16,6 +16,10 @@
   top: 0;
 }
 
+.svg_wrapper_mobile {
+  display: none;
+}
+
 .svg_wrapper svg {
   height: 100%;
   position: absolute;
@@ -91,6 +95,21 @@
   margin-bottom: 40px;
 }
 
+.image_circle {
+  transition: 0.2s;
+}
+
+.image_circle:hover {
+  position: relative;
+  cursor: pointer;
+  transition: 0.2s;
+  box-shadow: 0px 0px 15px 5px #00229c;
+}
+
+.mobile_btn {
+  display: none;
+}
+
 @media (max-width: 1419.98px) {
   .main_screen_titles {
     margin-top: 70px;
@@ -119,5 +138,62 @@
   .main_screen_info_left {
     max-height: 700px;
     height: calc(100vh - 100px);
+  }
+}
+
+@media (max-width: 991.98px) {
+  .svg_wrapper {
+    display: none;
+  }
+
+  .svg_wrapper_mobile {
+    display: block;
+    width: 100%;
+    position: relative;
+    left: 0;
+    bottom: -7px;
+  }
+
+  .svg_wrapper_mobile svg {
+    width: 100%;
+    height: auto;
+  }
+  .main_screen {
+    max-height: initial;
+  }
+  .main_screen {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    padding-top: 0;
+    height: auto;
+  }
+  .main_screen_info_left {
+    max-height: initial;
+    height: auto;
+    position: relative;
+  }
+  .main_screen_info {
+    display: none;
+  }
+  .main_screen_titles {
+    margin-top: 100px;
+  }
+  .main_screen_titles img {
+    margin: 0 0 20px;
+  }
+  .mobile_btn {
+    display: flex;
+    justify-content: center;
+  }
+}
+
+@media (max-width: 477.98px) {
+  .main_screen_titles h4 {
+    font-size: 30px;
+  }
+
+  .main_screen_titles h4 span {
+    font-size: 30px;
   }
 }
