--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -63,3 +63,35 @@ footer {
     line-height: 26px;
   }
 }
+
+@media (max-width: 991.98px) {
+  .footer_main {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .soc_links {
+    margin-top: 30px;
+  }
+}
+
+@media (max-width: 767.98px) {
+  .footer_main {
+    flex-direction: column;
+    align-items: center;
+  }
+  .footer_main nav {
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .footer_main nav a {
+    margin-bottom: 15px;
+  }
+  .soc_links {
+    width: 100%;
+    margin-top: 10px;
+  }
+  footer {
+    padding: 30px 0;
+  }
+}
