--- a/src/components/Menu/Menu.module.css
+++ b/src/components/Menu/Menu.module.css
@@ -2,6 +2,7 @@
   position: absolute;
   top: 0;
   z-index: 5;
+  height: 100px;
   width: 100%;
 }
 
@@ -22,6 +23,48 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+.mobile_menu {
+  display: none;
+  width: 100%;
+  height: 100px;
+  align-items: center;
+  justify-content: space-between;
+}
+.menu_btn {
+  width: 30px;
+  height: 30px;
+  position: relative;
+  z-index: 2;
+  overflow: hidden;
+}
+.menu_btn span {
+  width: 34px;
+  height: 3px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #ffffff;
+  transition: all 0.5s;
+}
+.menu_btn span:nth-of-type(2) {
+  top: calc(50% - 8px);
+}
+.menu_btn span:nth-of-type(3) {
+  top: calc(50% + 8px);
+}
+
+.menu_btn.active span:nth-of-type(1) {
+  display: none;
+}
+.menu_btn.active span:nth-of-type(2) {
+  top: 50%;
+  transform: translate(-50%, 0%) rotate(45deg);
+}
+.menu_btn.active span:nth-of-type(3) {
+  top: 50%;
+  transform: translate(-50%, 0%) rotate(-45deg);
 }
 
 .menu nav {
@@ -61,8 +104,98 @@
   transition: 0.3s;
 }
 
+.mobile_menu a {
+  z-index: 3;
+  position: relative;
+}
+
+.mobile_menu .menu_btn {
+  z-index: 3;
+  position: relative;
+}
+.mobile_menu_content {
+  top: -100%;
+  height: 100%;
+  transition: 0.2s;
+  position: fixed;
+  overflow: hidden;
+  width: 100%;
+  left: 0;
+}
+
+.mobile_menu_content.active {
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  background: #f4f7fd;
+  z-index: 2;
+  top: 0;
+  left: 0;
+  transition: 0.2s;
+}
+.mobile_menu_content_header {
+  width: 100%;
+  height: 200px;
+  background: url("../../assets/img/mobile_menu_header.png") no-repeat center;
+  background-size: cover;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.mobile_menu_content nav {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.mobile_menu_content nav a {
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 30px;
+  color: #005bbc;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  margin-top: 30px;
+}
+
+.mobile_menu_content .soc_links {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 40px;
+}
+
+.mobile_menu_content .soc_links a {
+  margin: 0 15px;
+  transition: 0.2s;
+}
+
+.mobile_menu_content .soc_links a:hover {
+  fill: #044081;
+  transform: scale(1.1);
+  transition: 0.2s;
+}
+
 @media (max-width: 1279.98px) {
   .menu nav a {
     margin: 0 20px 0 0;
+  }
+}
+
+@media (max-width: 991.98px) {
+  .menu_wrapper.open {
+    height: 100%;
+  }
+  .menu {
+    display: none;
+  }
+  .mobile_menu {
+    display: flex;
+    height: 60px;
+  }
+  .menu_wrapper {
+    height: 60px;
   }
 }
