--- a/src/components/Partners/Partners.module.css
+++ b/src/components/Partners/Partners.module.css
@@ -73,3 +73,40 @@
   max-height: 120px;
   max-width: 220px;
 }
+
+@media (max-width: 767.98px) {
+  .slide a {
+    width: 200px;
+    height: 110px;
+  }
+  .slide img {
+    max-height: 90px;
+    max-width: 160px;
+  }
+}
+
+@media (max-width: 477.98px) {
+  .partners {
+    padding: 30px 0 70px;
+  }
+  .slide a {
+    width: 157px;
+    height: 90px;
+    margin-bottom: 20px;
+  }
+  .slide img {
+    max-height: 70px;
+    max-width: 130px;
+  }
+
+  @media (max-width: 374.98px) {
+    .slide a {
+      width: 130px;
+      height: 80px;
+    }
+    .slide img {
+      max-height: 60px;
+      max-width: 100px;
+    }
+  }
+}
