--- a/src/components/Roadmap/Roadmap.module.css
+++ b/src/components/Roadmap/Roadmap.module.css
@@ -232,3 +232,47 @@
   padding-left: 150px;
   text-align: left;
 }
+
+@media (max-width: 991.98px) {
+  .roadmap_big_logo {
+    display: none;
+  }
+  .roadmap_second_row {
+    flex-direction: column;
+    align-items: center;
+  }
+  .roadmap_first_row {
+    align-items: center;
+    flex-direction: column;
+  }
+  .rodmap_midle .roadmap_column:nth-child(3),
+  .roadmap_second_row .roadmap_column:nth-child(2),
+  .rodmap_midle.roadmap_second_row .roadmap_column:nth-child(2),
+  .rodmap_midle .roadmap_column:nth-child(1) {
+    background-image: none;
+  }
+  .roadmap_second_row .roadmap_column:first-child {
+    border-bottom-left-radius: 0;
+    border-top-right-radius: 16px;
+    padding: 0;
+  }
+  .roadmap_second_row .roadmap_column:nth-child(2) {
+    padding: 0;
+    box-shadow: -4px 8px 11px rgb(0 0 0 / 43%), inset 0px 5px 5px #ffffff;
+  }
+  .roadmap_second_row .roadmap_column:nth-child(2) .roadmap_title,
+  .roadmap_second_row .roadmap_column:nth-child(3) .roadmap_title {
+    height: 50px;
+  }
+
+  .roadmap_second_row .roadmap_column:nth-child(3) {
+    border-bottom-right-radius: 16px;
+    border-bottom-left-radius: 16px;
+    border-top-right-radius: 0;
+    box-shadow: -4px 8px 11px rgb(0 0 0 / 43%), inset 0px 5px 5px #ffffff;
+  }
+  .roadmap_second_row,
+  .roadmap_first_row {
+    padding: 0;
+  }
+}
