--- a/src/components/Roadmap/Roadmap.module.css
+++ b/src/components/Roadmap/Roadmap.module.css
@@ -1,6 +1,6 @@
 .roadmap {
-  background: url("../../assets/img/roadmap_bg.png") no-repeat center;
-  background-size: cover;
+  /*  background: url("../../assets/img/roadmap_bg.png") no-repeat center;
+  background-size: cover; */
   padding: 70px 0 100px;
 }
 
