--- a/src/components/FirstScreen/FirstScreen.module.css
+++ b/src/components/FirstScreen/FirstScreen.module.css
@@ -1,7 +1,7 @@
 .main_screen {
   width: 100%;
-  background: url("../../assets/img/main_screen_bg.png") no-repeat center;
-  background-size: cover;
+  /*   background: url("../../assets/img/main_screen_bg.png") no-repeat center;
+  background-size: cover; */
   max-height: 900px;
   height: 100vh;
   position: relative;
@@ -97,17 +97,58 @@
 
 .image_circle {
   transition: 0.2s;
+  transform: scale(1);
+}
+
+.image_circle_1 {
+  transform-origin: 69% 24%;
+}
+
+.image_circle_2 {
+  transform-origin: 86% 69%;
+}
+
+.image_circle_3 {
+  transform-origin: 86% 41%;
+}
+
+.image_circle_4 {
+  transform-origin: 69% 90%;
 }
 
 .image_circle:hover {
   position: relative;
   cursor: pointer;
   transition: 0.2s;
-  box-shadow: 0px 0px 15px 5px #00229c;
+  transform: scale(1.2);
 }
 
 .mobile_btn {
   display: none;
+}
+
+.logo {
+  transform-origin: 56% 57%;
+  -webkit-animation: rot 1s linear 0.2s;
+  animation: rot 1s linear 0.2s;
+}
+
+@-webkit-keyframes rot {
+  0% {
+    transform: rotate(0);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes rot {
+  0% {
+    transform: rotate(0);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 @media (max-width: 1419.98px) {
@@ -142,6 +183,10 @@
 }
 
 @media (max-width: 991.98px) {
+  .image_circle {
+    transition: 0.2s;
+    transform: scale(1) !important;
+  }
   .svg_wrapper {
     display: none;
   }
