--- a/src/components/Menu/Menu.module.css
+++ b/src/components/Menu/Menu.module.css
@@ -84,15 +84,15 @@
   margin: 0 50px 0 0;
   position: relative;
 }
-.menu nav a::before {
+.menu nav a:not(:first-child)::before {
   content: "";
   left: 15%;
   width: 0;
   transition: 0.3s;
 }
 
-.menu nav a:global(.active)::before,
-.menu nav a:hover::before {
+.menu nav a:not(:first-child):global(.active)::before,
+.menu nav a:not(:first-child):hover::before {
   content: "";
   position: absolute;
   bottom: -5px;
