--- a/src/components/FirstScreen/FirstScreen.module.css
+++ b/src/components/FirstScreen/FirstScreen.module.css
@@ -156,19 +156,33 @@
     margin-top: 70px;
   }
   .main_screen_info h5 {
-    font-size: 23px;
+    font-size: 21px;
+  }
+  .main_screen_info h5 span {
+    font-size: 42px;
+  }
+}
+
+@media (min-width: 1279.99px) and (max-width: 1281px) {
+  @media (min-height: 1023px) and (max-height: 1025px) {
+    .main_screen_titles {
+      margin-top: 100px;
+    }
+    .main_screen_info div {
+      margin-right: 25px;
+    }
   }
 }
 
 @media (max-width: 1279.98px) {
   .main_screen_info div {
-    margin-right: 15px;
+    margin-right: 12px;
   }
   .main_screen_info h5 {
-    font-size: 18px;
+    font-size: 17px;
   }
   .main_screen_info h5 span {
-    font-size: 36px;
+    font-size: 30px;
   }
 }
 
@@ -179,6 +193,12 @@
   .main_screen_info_left {
     max-height: 700px;
     height: calc(100vh - 100px);
+  }
+  .main_screen_info h5 span {
+    font-size: 28px;
+  }
+  .main_screen_info h5 {
+    font-size: 16px;
   }
 }
 
